--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title></title>
+        <link rel="stylesheet" text="tex/css" href="static/css/style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     </head>
     <body>
+        <div id="map"></div>
 
+        <script src="bower_components/knockout/knockout.js"></script>
+        <script src="static/js/app.js"></script>
+        <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpx8CimV558zHZcHIB1xRDdZVpXd5G73c&callback=initMap">
+        </script>
     </body>
 </html>
