Populate Model with Foursquare API
Used the Foursquare API to identify breweries in the Bay area which
populates our Knockout observable array.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
         <title></title>
         <link rel="stylesheet" text="tex/css" href="static/css/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
     </head>
     <body>
         <div id="map"></div>
+        <div id="test">
+            test
+        </div>
 
         <script src="bower_components/knockout/knockout.js"></script>
         <script src="static/js/app.js"></script>
         <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpx8CimV558zHZcHIB1xRDdZVpXd5G73c&callback=initMap">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKcNmv15glyLwUeDxkWf63TQOibF5MvXY&callback=initMap">
         </script>
     </body>
 </html>
