--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     </head>
     <body>
         <aside id="aside">
-            <input type="text" data-bind="testInput: filterResults">
+            <input type="text" data-bind="textInput: input">
             <ul data-bind="foreach: breweryList">
-                <li><span data-bind="text: $data"></span></li>
+                <li><span data-bind="text: name, visible: visible"></span></li>
             </ul>
             <p id="error"></p>
         </aside>
