--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title></title>
         <link rel="stylesheet" text="tex/css" href="static/css/style.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+        <script src="bower_components/jquery/jquery.js"></script>
+        <script defer src="bower_components/fontawesome/fontawesome-all.min.js"></script>
     </head>
     <body>
         <main class="container">
