Adjust the showAside button down

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <aside id="aside">
                 <section class="userInput">
                     <input type="text" data-bind="textInput: input, visible: inputHide" placeholder="Filter the Results">
-                    <button data-bind="visible: showAside, click: toggleAsideDetails">
+                    <button class="showAside" data-bind="visible: showAside, click: toggleAsideDetails">
                         <i class="fas fa-angle-double-right" ></i>
                     </button>
                     <button data-bind="visible: hideAside, click: toggleAsideDetails">
